--- a/ViewzShare/wwwroot/css/view-session.css
+++ b/ViewzShare/wwwroot/css/view-session.css
@@ -632,3 +632,22 @@
             pointer-events: auto;
         }
 
+        .fotorama__nav,
+        .fotorama__arr,
+        .fotorama__fullscreen-icon {
+            display: block;
+            opacity: 1;
+        }
+
+        .sr-only {
+            position: absolute;
+            width: 1px;
+            height: 1px;
+            padding: 0;
+            margin: -1px;
+            overflow: hidden;
+            clip: rect(0, 0, 0, 0);
+            white-space: nowrap;
+            border: 0;
+        }
+
